# python-p3-functions

./: pyproject.toml
python_p3_functions.egg-info/: PKG-INFO  SOURCES.txt
